docs(project): streamline CLAUDE.md configuration
- Remove redundant commit/version guide reference
- Simplify architecture and build documentation
- Use file references (@) for linked resources
- Focus on essential setup and configuration info